Fixed alignment

--- a/src/components/Page.css
+++ b/src/components/Page.css
@@ -68,10 +68,10 @@ main .product-end {
 main .product__price {
   user-select: none;
   font-weight: bold;
-  padding: 0 0 0 .5em;
 }
 main .product__add-to-cart {
   font-size: .8rem;
+  margin-left: -.5em;
 }
 @media screen and (min-width: 23.43em) {
   main :where(.product) {
